--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/style.css" />
     <title>Portfolio!</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light bg-danger-subtle">
+    <nav class="navbar navbar-expand-lg navbar-light bg-danger-subtle">
       <div class="container">
         <a class="navbar-brand" href="#"
           ><i
@@ -48,16 +48,48 @@
               <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="btn btn-danger bg-orange text-white" href="#">Download CV</a>
+              <a class="btn btn-danger bg-orange text-white" href="#"
+                >Download CV</a
+              >
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
+    <div class="bg-danger-subtle">
+      <div class="container d-flex justify-content-between p-5">
+        <div class="mt-5">
+          <h3 style="color: black">
+            Hi, I'm <span class="text-orange">John Dorain</span>
+          </h3>
+          <h1 class="text-orange fw-bolder display-1">Full Stack Developer</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda,
+            adipisci praesentium repellendus debitis amet voluptatibus saepe, ad
+            mollitia asperiores ex soluta facere commodi molestiae totam, quia
+            cumque eaque illo omnis.
+          </p>
+          <div class="top-btn mt-3">
+            <button class="btn btn-lg btn-danger bg-orange text-white">
+              Hire Me
+            </button>
+          </div>
+        </div>
+        <div class="d-none d-md-flex justify-content-between p-2">
+          <img
+            src="img/pic1.jpg"
+            alt="John Dorain"
+            class="w-100 h-100"
+            style="mix-blend-mode: multiply"
+          />
+        </div>
+      </div>
+    </div>
+
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
   </body>
