--- a/index.html
+++ b/index.html
@@ -87,6 +87,99 @@
       </div>
     </div>
 
+    <section class="container py-5">
+      <div class="m-3 mb-5">
+        <div>
+          <p class="text-orange fw-bold ">My Skills</p>
+        </div>
+        <div>
+          <h3 class="fw-bold">My Expertise</h3>
+        </div>
+      </div>
+      <div class="d-flex justify-content-between flex-wrap m-3">
+        <div class="card card-width shadow p-3 mt-3">
+          <div class="icon">
+            <i class="fa-solid fa-hat-wizard icon-container"></i>
+          </div>
+          <div class="card-content mt-3">
+            <h4 class="main-text text-wrap fw-bold">
+              Web app development
+            </h4>
+            <p class="sub-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, laboriosam odio autem totam id illo?
+            </p>
+          </div>
+        </div>
+        <div class="card card-width shadow p-3 mt-3">
+          <div class="icon">
+            <i class="fa-solid fa-hat-wizard icon-container"></i>
+          </div>
+          <div class="card-content mt-3">
+            <h4 class="main-text text-wrap fw-bold">
+              Web app development
+            </h4>
+            <p class="sub-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, laboriosam odio autem totam id illo?
+            </p>
+          </div>
+        </div>
+        <div class="card card-width shadow p-3 mt-3">
+          <div class="icon">
+            <i class="fa-solid fa-hat-wizard icon-container"></i>
+          </div>
+          <div class="card-content mt-3">
+            <h4 class="main-text text-wrap fw-bold">
+              Web app development
+            </h4>
+            <p class="sub-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, laboriosam odio autem totam id illo?
+
+            </p>
+          </div>
+        </div>
+        <div class="card card-width shadow p-3 mt-3">
+          <div class="icon">
+            <i class="fa-solid fa-hat-wizard icon-container"></i>
+          </div>
+          <div class="card-content mt-3">
+            <h4 class="main-text text-wrap fw-bold">
+              Web app development
+            </h4>
+            <p class="sub-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, laboriosam odio autem totam id illo?
+            </p>
+          </div>
+        </div>
+        <div class="card card-width shadow p-3 mt-3">
+          <div class="icon">
+            <i class="fa-solid fa-hat-wizard icon-container"></i>
+          </div>
+          <div class="card-content mt-3">
+            <h4 class="main-text text-wrap fw-bold">
+              Web app development
+            </h4>
+            <p class="sub-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, laboriosam odio autem totam id illo?
+            </p>
+          </div>
+        </div>
+        <div class="card card-width shadow p-3 mt-3">
+          <div class="icon">
+            <i class="fa-solid fa-hat-wizard icon-container"></i>
+          </div>
+          <div class="card-content mt-3">
+            <h4 class="main-text text-wrap fw-bold">
+              Web app development
+            </h4>
+            <p class="sub-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, laboriosam odio autem totam id illo?
+
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
