--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <section class="container py-5">
       <div class="m-3 mb-5">
         <div>
-          <p class="text-orange fw-bold ">My Skills</p>
+          <p class="text-orange fw-bold">My Skills</p>
         </div>
         <div>
           <h3 class="fw-bold">My Expertise</h3>
@@ -102,11 +102,10 @@
             <i class="fa-solid fa-hat-wizard icon-container"></i>
           </div>
           <div class="card-content mt-3">
-            <h4 class="main-text text-wrap fw-bold">
-              Web app development
-            </h4>
+            <h4 class="main-text text-wrap fw-bold">Web app development</h4>
             <p class="sub-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, laboriosam odio autem totam id illo?
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum,
+              laboriosam odio autem totam id illo?
             </p>
           </div>
         </div>
@@ -115,11 +114,10 @@
             <i class="fa-solid fa-hat-wizard icon-container"></i>
           </div>
           <div class="card-content mt-3">
-            <h4 class="main-text text-wrap fw-bold">
-              Web app development
-            </h4>
+            <h4 class="main-text text-wrap fw-bold">Web app development</h4>
             <p class="sub-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, laboriosam odio autem totam id illo?
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum,
+              laboriosam odio autem totam id illo?
             </p>
           </div>
         </div>
@@ -128,12 +126,10 @@
             <i class="fa-solid fa-hat-wizard icon-container"></i>
           </div>
           <div class="card-content mt-3">
-            <h4 class="main-text text-wrap fw-bold">
-              Web app development
-            </h4>
+            <h4 class="main-text text-wrap fw-bold">Web app development</h4>
             <p class="sub-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, laboriosam odio autem totam id illo?
-
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum,
+              laboriosam odio autem totam id illo?
             </p>
           </div>
         </div>
@@ -142,11 +138,10 @@
             <i class="fa-solid fa-hat-wizard icon-container"></i>
           </div>
           <div class="card-content mt-3">
-            <h4 class="main-text text-wrap fw-bold">
-              Web app development
-            </h4>
+            <h4 class="main-text text-wrap fw-bold">Web app development</h4>
             <p class="sub-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, laboriosam odio autem totam id illo?
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum,
+              laboriosam odio autem totam id illo?
             </p>
           </div>
         </div>
@@ -155,11 +150,10 @@
             <i class="fa-solid fa-hat-wizard icon-container"></i>
           </div>
           <div class="card-content mt-3">
-            <h4 class="main-text text-wrap fw-bold">
-              Web app development
-            </h4>
+            <h4 class="main-text text-wrap fw-bold">Web app development</h4>
             <p class="sub-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, laboriosam odio autem totam id illo?
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum,
+              laboriosam odio autem totam id illo?
             </p>
           </div>
         </div>
@@ -168,17 +162,113 @@
             <i class="fa-solid fa-hat-wizard icon-container"></i>
           </div>
           <div class="card-content mt-3">
-            <h4 class="main-text text-wrap fw-bold">
-              Web app development
-            </h4>
+            <h4 class="main-text text-wrap fw-bold">Web app development</h4>
             <p class="sub-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, laboriosam odio autem totam id illo?
-
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum,
+              laboriosam odio autem totam id illo?
             </p>
           </div>
         </div>
       </div>
     </section>
+
+    <div class="mt-5">
+      <footer class="text-center text-lg-start text-dark bg-danger-subtle"
+      >
+        <div class="bg-orange">
+          <section
+            class="container d-block d-md-flex justify-content-between p-4 text-white"
+          >
+            <div class="me-md-5 mb-3 mb-md-0">Get connected with us on social networks:</div>
+            <div>
+              <a href="#" class="text-white me-4">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="#" class="text-white me-4">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="#" class="text-white me-4">
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a href="#" class="text-white me-4">
+                <i class="fab fa-linkedin"></i>
+              </a>
+              <a href="#" class="text-white me-4">
+                <i class="fab fa-github"></i>
+              </a>
+            </div>
+          </section>
+        </div>
+
+        <section>
+          <div class="container text-center text-md-start mt-5">
+            <div class="row mt-3">
+              <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                <h6 class="text-uppercase fw-bold">Company name</h6>
+                <hr
+                class="mb-4 mt-0 d-inline-block mx-auto"
+                style="width: 60px; background-color: #7c4dff; height: 2px;"
+                >
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis ad ut itaque in officia voluptatem, dicta debitis?
+                </p>
+              </div>
+              <div class="col-md-2 mx-auto mb-4">
+                <h6 class="text-uppercase fw-bold">Products</h6>
+                <hr
+                class="mb-4 mt-0 d-inline-block mx-auto"
+                style="width: 60px; background-color: #7c4dff; height: 2px;"
+                >
+                <p>
+                  <a href="#" class="text-dark">Product 1</a>
+                </p>
+                <p>
+                  <a href="#" class="text-dark">Product 2</a>
+                </p>
+                <p>
+                  <a href="#" class="text-dark">Product 3</a>
+                </p>
+                <p>
+                  <a href="#" class="text-dark">Product 4</a>
+                </p>
+              </div>
+              <div class="col-md-2 mx-auto mb-4">
+                <h6 class="text-uppercase fw-bold">Useful links</h6>
+                <hr
+                class="mb-4 mt-0 d-inline-block mx-auto"
+                style="width: 60px; background-color: #7c4dff; height: 2px;"
+                >
+                <p>
+                  <a href="#" class="text-dark">Your Account</a>
+                </p>
+                <p>
+                  <a href="#" class="text-dark">Become an Afffilate</a>
+                </p>
+                <p>
+                  <a href="#" class="text-dark">Help</a>
+                </p>
+              </div>
+              <div class="col-md-2 mx-auto mb-4">
+                <h6 class="text-uppercase fw-bold">Contact</h6>
+                <hr
+                class="mb-4 mt-0 d-inline-block mx-auto"
+                style="width: 60px; background-color: #7c4dff; height: 2px;"
+                >
+                <p>
+                  <a href="#" class="text-dark">India</a>
+                </p>
+                <p>
+                  <a href="#" class="text-dark">info@gmail.com</a>
+                </p>
+                <p>
+                  <a href="#" class="text-dark">+91 1234567890</a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+      </footer>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
